    [workspace]
resolver = "2"

members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vincent Oberle"]
description = "Advent of Code 2017"

[workspace.lints.clippy]
redundant_closure_for_method_calls = "warn"
match_same_arms = "warn"
range_plus_one = "warn"
trivially_copy_pass_by_ref = "warn"
semicolon_if_nothing_returned = "warn"
needless-for-each = "warn"