[workspace]
resolver = "2"

members = [
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vincent Oberle"]
description = "Advent of Code 2018"

[workspace.lints.clippy]
redundant_closure_for_method_calls = "warn"
match_same_arms = "warn"
range_plus_one = "warn"
trivially_copy_pass_by_ref = "warn"
semicolon_if_nothing_returned = "warn"
needless-for-each = "warn"