[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
    "day18",
    "day19",
    "day20",
    "day21",
    "day22",
    "day23",
]
resolver = "2"

[workspace.lints.clippy]
bool_to_int_with_if = "warn"
flat_map_option = "warn"
items_after_statements = "warn"
match_same_arms = "warn"
needless-for-each = "warn"
range_plus_one = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
trivially_copy_pass_by_ref = "warn"

[workspace.package]
authors = ["Vincent Oberle"]
description = "Advent of Code 2021"
edition = "2021"
version = "0.1.0"
