[workspace]
resolver = "2"

members = [
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day7/day7_part1",
    "day8",
    "day8/day8_part2",
    "day9",
    "day10",
    "day11",
    "day12",
    "day12/day12_part1",
    "day13",
    "day14",
    "day15",
    "day16",
    "day18",
    "day19",
    "day20",
    "day21",
    "day23",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vincent Oberle"]
description = "Advent of Code 2023"
