[workspace]
resolver = "2"

members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day07/day07_part1",
    "day08",
    "day08/day08_part2",
    "day09",
    "day10",
    "day11",
    "day12",
    "day12/day12_part1",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
    "day18",
    "day19",
    "day20",
    "day21",
    "day22",
    "day23",
    "day24",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vincent Oberle"]
description = "Advent of Code 2023"
