[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
    "day18",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
authors = ["Vincent Oberle"]
description = "Advent of Code 2024"
edition = "2021"
version = "0.1.0"
