[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
authors = ["Vincent Oberle"]
description = "Advent of Code 2025"
edition = "2024"
version = "0.1.0"
