[workspace]
members = [
    "2024/puzzle01",
    "2024/puzzle02",
    "2024/puzzle03",
    "2024/puzzle04",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
authors = ["Vincent Oberle"]
description = "Codyssi Puzzles"
edition = "2024"
version = "0.1.0"
