[workspace]
members = [
    "puzzle_2024_01",
    "puzzle_2024_02",
    "puzzle_2024_03",
    "puzzle_2024_04",
    "puzzle_2025_01",
    "puzzle_2025_02",
    "puzzle_2025_03",
    "puzzle_2025_04",
    "puzzle_2025_05",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
authors = ["Vincent Oberle"]
description = "Codyssi Puzzles"
edition = "2024"
version = "0.1.0"
