[workspace]
members = [
    "puzzle01",
    "puzzle02",
    "puzzle03",
    "puzzle04",
    "puzzle05",
    "puzzle06",
    "puzzle07",
    "puzzle08",
    "puzzle09",
    "puzzle10",
    "puzzle11",
    "puzzle12",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
authors = ["Vincent Oberle"]
description = "Internationali­zation Puzzles"
edition = "2024"
version = "0.1.0"
